tu vieja le gusta el cachibache

--- a/estilos.css
+++ b/estilos.css
@@ -3,3 +3,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: blueviolet;
 }
+h1 {
+    color: aquamarine;
+    width: 70px;
+    background-color: red;
+}
